force-app/main/default/objects/Comp_Plan_Rule__c/Comp_Plan_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines the specific criteria and result for a Comp Plan calculation.</description>
    <label>Comp Plan Rule</label>
    <nameField>
        <label>Comp Plan Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comp Plan Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>