force-app/main/default/objects/Comp_Plan_Rule__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <label>Comp Plan</label>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Comp Plan Rules</relationshipLabel>
    <relationshipName>Comp_Plan_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>