force-app/main/default/objects/Comp_Plan_Rule__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Comp_Plan_Rule_Operator</valueSetName>
    </valueSet>
</CustomField>