force-app/main/default/objects/Comp_Plan_Rule__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>