force-app/main/default/objects/Comp_Plan_Rule__c/fields/Value2__c.field-meta.xml
<CustomField>
    <fullName>Value2__c</fullName>
    <label>Value2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>