force-app/main/default/objects/Comp_Plan_Rule__c/fields/Variable2__c.field-meta.xml
<CustomField>
    <fullName>Variable2__c</fullName>
    <label>Variable2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Comp_Plan_Rule_Variable</valueSetName>
    </valueSet>
</CustomField>